force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>The answer to a question of a knowledge article.</description>
    <inlineHelpText>This is the answer to the question in the knowledge article.</inlineHelpText>
    <label>Answer</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>