force-app/main/default/objects/Knowledge__kav/fields/Contains_Work_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Contains_Work_Instruction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Knowledge article contains a work instruction for employees.</description>
    <inlineHelpText>Add the workinstruction for the Knowledge article here.</inlineHelpText>
    <label>Contains Work Instruction</label>
    <type>Checkbox</type>
</CustomField>