force-app/main/default/objects/Knowledge__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>A question posed in a knowledge article.</description>
    <inlineHelpText>This is a question posed in the knowledge article.</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>