force-app/main/default/objects/Knowledge__kav/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Text related to the knowledge article</description>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>