force-app/main/default/objects/Knowledge__kav/fields/To_be_Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>To_be_Archived_Date__c</fullName>
    <description>This field is used to register the archive date of the knowledge article.</description>
    <inlineHelpText>This field is used to register the archive date of the knowledge article.</inlineHelpText>
    <label>To be Archived Date</label>
    <type>Date</type>
</CustomField>