force-app/main/default/objects/Knowledge__kav/fields/Web_Answer__c.field-meta.xml
<CustomField>
    <fullName>Web_Answer__c</fullName>
    <description>The answer to the question in the knowledge article designed specifically for web use.</description>
    <inlineHelpText>This is the answer that will be shown on the website knowledge base.</inlineHelpText>
    <label>Web Answer</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>