force-app/main/default/objects/Knowledge__kav/fields/Work_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Work_Instruction__c</fullName>
    <description>The work instruction that is added to the Knowledge article.</description>
    <inlineHelpText>Add the work instruction here.</inlineHelpText>
    <label>Work Instruction</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>