force-app/main/default/objects/Knowledge__kav/listViews/published_articles.listView-meta.xml
<ListView>
    <fullName>published_articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>OWNER_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>nl_NL</value>
    </filters>
    <label>Gepubliceerde Artikelen</label>
</ListView>